# solana-starter

./: .gitignore  .travis.yml  README.md  package.json
.github/: README.md  dependabot.yml
.github/workflows/: main.yml
client/: hello.ts  hello_world.ts  main.ts
program/: Cargo.toml  lib.rs
program/tests/: lib.rs
