
[package]
name = "solana-starter"
version = "0.0.1"
description = "solana program starter"
authors = ["Btwiuse Arch <btwiuse@gmail.com>"]
repository = "https://github.com/btwiuse/solana-starter"
license = "MIT"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "hello"
path = "lib.rs"
crate-type = ["cdylib", "lib"]
